--- a/app/src/main/res/layout/nav_header_parent.xml
+++ b/app/src/main/res/layout/nav_header_parent.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="10dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:paddingRight="18dp"
-        app:srcCompat="@drawable/ic_user2" />
+        app:srcCompat="@drawable/ic_user" />
 
     <TextView
         android:id="@+id/name_parent"
