--- a/app/src/main/res/menu/parent_main.xml
+++ b/app/src/main/res/menu/parent_main.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_home"
+        android:id="@+id/action_add_child"
         android:orderInCategory="100"
         android:title="Add Child"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_person_add_white_24dp"
         app:showAsAction="always" />
 </menu>
