--- a/app/src/main/res/layout/fragment_parent_add_child.xml
+++ b/app/src/main/res/layout/fragment_parent_add_child.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    android:background="@drawable/mytint"
+    android:background="?android:windowBackground"
     tools:context=".ParentAddChild"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
