--- a/app/src/main/res/layout/fragment_parent_child_list.xml
+++ b/app/src/main/res/layout/fragment_parent_child_list.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?android:windowBackground"
     android:theme="@style/AppTheme.NoActionBar"
     tools:context=".ParentChildList">
 
