--- a/app/src/main/res/layout/fragment_child_feed.xml
+++ b/app/src/main/res/layout/fragment_child_feed.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/toolbar_child_feed"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                android:background="#1E56A0"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
             </androidx.appcompat.widget.Toolbar>
