--- a/app/src/main/res/layout/class_data_layout.xml
+++ b/app/src/main/res/layout/class_data_layout.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
         android:backgroundTint="#5252CC"
-        android:hint="Class ID"
+        android:hint="Room ID"
         android:textColorHint="#5252CC"
         android:textSize="15dp">
 
@@ -27,7 +27,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:backgroundTint="#5252CC"
-        android:hint="Class Name"
+        android:hint="Room Name"
         android:textColorHint="#5252CC"
         android:textSize="15dp">
 
