--- a/app/src/main/res/layout/custom_listview_frame.xml
+++ b/app/src/main/res/layout/custom_listview_frame.xml
@@ -6,13 +6,28 @@
     android:padding="10dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/ListItem_one"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="Room Name: "
+            android:textColor="#1E56A0"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/ListItem_one"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="15dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,15 +40,16 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:text="Room No.: "
-            android:textSize="18sp" />
+            android:textColor="#1E56A0"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/ListItem_two"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:textColor="#000000"
             android:text="TextView"
-            android:textSize="18sp" />
+            android:textSize="15dp" />
     </LinearLayout>
 
 </LinearLayout>
